<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventarioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnGuardarInventario"
            android:layout_width="181dp"
            android:layout_height="57dp"
            android:text="@string/Guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.887" />

        <LinearLayout
            android:layout_width="297dp"
            android:layout_height="458dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnGuardarInventario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/TituloInventario"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etFechaRealizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/FechaRealización"
                android:inputType="date"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etNumeroEstante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/NoEstante"
                android:inputType="textPersonName"
                android:maxLength="2" />

            <EditText
                android:id="@+id/etCodProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/CodigoProducto"
                android:inputType="textPersonName"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:hint="@string/NombreProducto"
                android:inputType="textPersonName"
                android:maxLength="15" />

            <EditText
                android:id="@+id/etConcentracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/Concentracion"
                android:inputType="textPersonName"
                android:maxLength="2" />

            <EditText
                android:id="@+id/etPresentacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:hint="@string/Presentacion"
                android:inputType="textPersonName"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etCantidadDisp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/CantidadDisponible"
                android:inputType="number"
                android:maxLength="3" />

            <EditText
                android:id="@+id/etValorUnitario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:hint="@string/ValorUnitario"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/etFechaVencimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/FechaVencimiento"
                android:inputType="date"
                android:maxLength="10" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>