<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnGuardar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PqrFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="377dp"
            android:layout_height="494dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="375dp"
                    android:layout_height="49dp"
                    android:paddingTop="10dp"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:text="@string/InfoUsuarioTitulo"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/Nombres"
                    android:inputType="textPersonName"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/etApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/Apellidos"
                    android:inputType="textPersonName"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/etIdentificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/Identificacion"
                    android:inputType="number"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/etBarrio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Barrio"
                    android:inputType="textPersonName"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:digits="0123456789."
                    android:hint="@string/Telefono"
                    android:inputType="phone"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLength="10" />

                <TextView
                    android:id="@+id/tviewTitulo2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/InformacionRecursoTitulo"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etTipoRecurso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="@string/TipoRecurso"
                    android:inputType="textPersonName"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/etFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Fecha"
                    android:inputType="date"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/etSituacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:gravity="start|top"
                    android:hint="@string/SituacionPresentada"
                    android:inputType="textMultiLine"
                    android:maxLength="10" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnEnviarPQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/Guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>